# kitti_motion_compensation

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
deployment/: install_dependencies.sh
examples/: generate_projection_visualization_of_run.cpp  motion_compensate_runs.cpp  place_holder.cpp
include/kitti_motion_compensation/: camera_model.hpp  data_io.hpp  data_types.hpp  handlers.hpp  lie_algebra.hpp  motion_compensation.hpp  timestamp_mocking.hpp  trajectory_interpolation.hpp  utilities_for_testing.hpp  utils.hpp
src/kitti_motion_compensation/: camera_model.cpp  data_io.cpp  handlers.cpp  lie_algebra.cpp  motion_compensation.cpp  timestamp_mocking.cpp  trajectory_interpolation.cpp  utils.cpp
test/: test_data_io.cpp  test_lie_algebra.cpp  test_motion_compensation.cpp  test_oxts_to_pose.cpp  test_timestamp_mocking.cpp  test_trajectory_interpolation.cpp
